--- a/Depo/Depo/Presentation/UserStories/Start/ResetPassword/ResetPasswordViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/ResetPassword/ResetPasswordViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -25,15 +25,15 @@
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N61-hP-OJv" userLabel="Container View">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="310"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="329"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="200" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="wOG-F2-kYY">
                                     <rect key="frame" x="20" y="20" width="374" height="200"/>
                                 </stackView>
-                                <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gf5-nD-c23" customClass="WhiteButtonWithRoundedCorner" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="93" y="242" width="228" height="44"/>
+                                <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gf5-nD-c23" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
+                                    <rect key="frame" x="28" y="260" width="358" height="45"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="44" id="7Hh-cx-tqs"/>
+                                        <constraint firstAttribute="height" constant="45" id="7Hh-cx-tqs"/>
                                     </constraints>
                                     <state key="normal" title="Button"/>
                                     <connections>
@@ -42,15 +42,14 @@
                                 </button>
                             </subviews>
                             <constraints>
-                                <constraint firstItem="gf5-nD-c23" firstAttribute="width" relation="greaterThanOrEqual" secondItem="N61-hP-OJv" secondAttribute="width" multiplier="0.55" id="7pf-JB-KG9"/>
                                 <constraint firstAttribute="trailing" secondItem="wOG-F2-kYY" secondAttribute="trailing" constant="20" symbolic="YES" id="8pe-Av-765"/>
-                                <constraint firstItem="gf5-nD-c23" firstAttribute="top" secondItem="wOG-F2-kYY" secondAttribute="bottom" constant="22" id="9D4-cT-vqP"/>
+                                <constraint firstItem="gf5-nD-c23" firstAttribute="top" secondItem="wOG-F2-kYY" secondAttribute="bottom" constant="40" id="9D4-cT-vqP"/>
                                 <constraint firstItem="gf5-nD-c23" firstAttribute="centerX" secondItem="N61-hP-OJv" secondAttribute="centerX" id="GmQ-nV-U8g"/>
-                                <constraint firstItem="gf5-nD-c23" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="N61-hP-OJv" secondAttribute="leading" constant="32" id="Ixy-Qm-okN"/>
+                                <constraint firstItem="gf5-nD-c23" firstAttribute="leading" secondItem="N61-hP-OJv" secondAttribute="leading" constant="28" id="Ixy-Qm-okN"/>
                                 <constraint firstItem="wOG-F2-kYY" firstAttribute="centerX" secondItem="N61-hP-OJv" secondAttribute="centerX" id="QGr-dD-ADA"/>
                                 <constraint firstItem="wOG-F2-kYY" firstAttribute="leading" secondItem="N61-hP-OJv" secondAttribute="leading" constant="20" id="Vme-LJ-gfw"/>
                                 <constraint firstItem="wOG-F2-kYY" firstAttribute="top" secondItem="N61-hP-OJv" secondAttribute="top" constant="20" id="a4c-9C-HOF"/>
-                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="gf5-nD-c23" secondAttribute="trailing" constant="32" id="dE1-Gj-am9"/>
+                                <constraint firstAttribute="trailing" secondItem="gf5-nD-c23" secondAttribute="trailing" constant="28" id="dE1-Gj-am9"/>
                                 <constraint firstAttribute="bottom" secondItem="gf5-nD-c23" secondAttribute="bottom" constant="24" id="roy-Qx-aao"/>
                             </constraints>
                         </view>
