--- a/Depo/Depo/Presentation/UserStories/Settings/FaceImage/FaceImageViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/FaceImage/FaceImageViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -26,24 +26,24 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k41-eG-1sV">
-                    <rect key="frame" x="8" y="20" width="359" height="166.5"/>
+                    <rect key="frame" x="8" y="20" width="304" height="166.5"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hNw-Pj-QXr" userLabel="face image View">
-                            <rect key="frame" x="0.0" y="0.0" width="359" height="65"/>
+                            <rect key="frame" x="0.0" y="0.0" width="304" height="65"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Face image grouping" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h4B-P5-Rce">
-                                    <rect key="frame" x="16" y="0.0" width="270" height="65"/>
+                                    <rect key="frame" x="16" y="0.0" width="215" height="65"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <fontDescription key="fontDescription" name="TurkcellSaturaReg" family="TurkcellSaturaReg" pointSize="18"/>
                                     <color key="textColor" red="0.30196078430000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hp4-RT-NAP">
-                                    <rect key="frame" x="294" y="17" width="51" height="31"/>
+                                    <rect key="frame" x="239" y="17" width="51" height="31"/>
                                     <color key="onTintColor" name="tint"/>
                                     <connections>
                                         <action selector="faceImageSwitchValueChanged:" destination="-1" eventType="valueChanged" id="W40-79-qLB"/>
@@ -64,33 +64,46 @@
                             </constraints>
                         </view>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="BaH-JO-rG7">
-                            <rect key="frame" x="16" y="75" width="327" height="81.5"/>
+                            <rect key="frame" x="16" y="75" width="272" height="81.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1f-4s-CY4">
-                                    <rect key="frame" x="0.0" y="0.0" width="327" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="272" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hwc-CI-WuL">
-                                    <rect key="frame" x="0.0" y="30.5" width="327" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="30.5" width="272" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vnL-jg-oC7">
-                                    <rect key="frame" x="0.0" y="61" width="327" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="61" width="272" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HH3-jN-8kF">
-                                    <rect key="frame" x="0.0" y="81.5" width="327" height="45"/>
+                                    <rect key="frame" x="0.0" y="81.5" width="272" height="45"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zth-QW-h0a" customClass="GradientPremiumButton" customModule="Billo" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="327" height="45"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="272" height="45"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="380" id="b5w-Gx-X8L"/>
+                                            </constraints>
                                             <state key="normal" title="Button"/>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="b5w-Gx-X8L"/>
+                                                </mask>
+                                            </variation>
+                                            <variation key="heightClass=regular-widthClass=regular">
+                                                <mask key="constraints">
+                                                    <include reference="b5w-Gx-X8L"/>
+                                                </mask>
+                                            </variation>
                                             <connections>
                                                 <action selector="onPremiumButtonTap:" destination="-1" eventType="touchUpInside" id="tpK-AC-wcO"/>
                                             </connections>
@@ -105,6 +118,12 @@
                                         <constraint firstAttribute="bottom" secondItem="zth-QW-h0a" secondAttribute="bottom" id="qq8-jA-tGW"/>
                                         <constraint firstAttribute="height" constant="45" id="wTh-Gw-Arc"/>
                                     </constraints>
+                                    <variation key="heightClass=regular-widthClass=regular">
+                                        <mask key="constraints">
+                                            <exclude reference="Icv-Q9-1Eg"/>
+                                            <exclude reference="aqR-pS-bHg"/>
+                                        </mask>
+                                    </variation>
                                 </view>
                             </subviews>
                         </stackView>
@@ -120,19 +139,19 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xQd-X7-H2l">
-                    <rect key="frame" x="8" y="207.5" width="359" height="187"/>
+                    <rect key="frame" x="8" y="207.5" width="304" height="187"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vcu-gc-WA6" userLabel="facebook View">
-                            <rect key="frame" x="0.0" y="0.0" width="359" height="65"/>
+                            <rect key="frame" x="0.0" y="0.0" width="304" height="65"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="facebook" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WSp-nP-Yha">
-                                    <rect key="frame" x="16" y="0.0" width="268" height="65"/>
+                                    <rect key="frame" x="16" y="0.0" width="213" height="65"/>
                                     <fontDescription key="fontDescription" name="TurkcellSaturaReg" family="TurkcellSaturaReg" pointSize="18"/>
                                     <color key="textColor" red="0.30196078430000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="xcD-4y-ueg">
-                                    <rect key="frame" x="294" y="17" width="51" height="31"/>
+                                    <rect key="frame" x="239" y="17" width="51" height="31"/>
                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="onTintColor" name="tint"/>
                                     <connections>
@@ -154,22 +173,22 @@
                             </constraints>
                         </view>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="yKZ-qH-VVG">
-                            <rect key="frame" x="16" y="75" width="327" height="92"/>
+                            <rect key="frame" x="16" y="75" width="272" height="92"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label Label Label Label Label Label Label Label " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tU6-ga-vMe">
-                                    <rect key="frame" x="0.0" y="0.0" width="327" height="41"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="272" height="41"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label Label Label Label Label Label Label Label " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rhq-SJ-P4C">
-                                    <rect key="frame" x="0.0" y="51" width="327" height="41"/>
+                                    <rect key="frame" x="0.0" y="51" width="272" height="41"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rpE-Ve-bqP">
-                                    <rect key="frame" x="0.0" y="92" width="327" height="1"/>
+                                    <rect key="frame" x="0.0" y="92" width="272" height="1"/>
                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="B4h-SC-AN0"/>
@@ -190,7 +209,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rTe-cC-LX9">
-                    <rect key="frame" x="47" y="414.5" width="281" height="50"/>
+                    <rect key="frame" x="24" y="414.5" width="272" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="39i-gY-W2T"/>
                     </constraints>
@@ -200,7 +219,7 @@
                     </connections>
                 </button>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Idq-Q9-sbe" userLabel="line View">
-                    <rect key="frame" x="20" y="196.5" width="335" height="1"/>
+                    <rect key="frame" x="20" y="196.5" width="280" height="1"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="toA-kz-A5j"/>
@@ -217,8 +236,8 @@
                 <constraint firstItem="cgP-Cu-WBb" firstAttribute="trailing" secondItem="xQd-X7-H2l" secondAttribute="trailing" constant="8" id="H9n-KD-Z5f"/>
                 <constraint firstItem="Idq-Q9-sbe" firstAttribute="top" secondItem="k41-eG-1sV" secondAttribute="bottom" constant="10" id="LcL-9B-zz5"/>
                 <constraint firstItem="rTe-cC-LX9" firstAttribute="centerX" secondItem="cgP-Cu-WBb" secondAttribute="centerX" id="Ve2-RV-VFi"/>
-                <constraint firstItem="rTe-cC-LX9" firstAttribute="width" secondItem="cgP-Cu-WBb" secondAttribute="width" multiplier="3:4" id="Vo5-EW-F1h"/>
                 <constraint firstItem="Idq-Q9-sbe" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="h8f-te-bkd"/>
+                <constraint firstItem="rTe-cC-LX9" firstAttribute="width" secondItem="zth-QW-h0a" secondAttribute="width" id="hVu-FQ-tl0"/>
                 <constraint firstAttribute="trailing" secondItem="Idq-Q9-sbe" secondAttribute="trailing" constant="20" id="nMJ-qn-ZLh"/>
                 <constraint firstItem="cgP-Cu-WBb" firstAttribute="trailing" secondItem="k41-eG-1sV" secondAttribute="trailing" constant="8" id="ntU-vi-tYw"/>
                 <constraint firstItem="k41-eG-1sV" firstAttribute="leading" secondItem="cgP-Cu-WBb" secondAttribute="leading" constant="8" id="pEH-Oo-79b"/>
