fixed password view leaking

--- a/Depo/Depo/Presentation/UserStories/Start/ForgotPassword/View/ForgotPasswordViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/ForgotPassword/View/ForgotPasswordViewController.xib
@@ -51,11 +51,14 @@
                                     <color key="backgroundColor" name="primaryBackground"/>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BRt-og-nfn" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="20" y="156.5" width="335" height="346.5"/>
+                                    <rect key="frame" x="20" y="156.5" width="335" height="137"/>
                                     <color key="backgroundColor" name="primaryBackground"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="137" id="FVc-9n-JUc"/>
+                                    </constraints>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQN-30-H9G" customClass="WhiteButtonWithRoundedCorner" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="28" y="543" width="319" height="45"/>
+                                    <rect key="frame" x="28" y="333.5" width="319" height="45"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="45" id="LD9-OQ-ca2"/>
                                     </constraints>
@@ -70,7 +73,6 @@
                                 <constraint firstItem="quc-Rg-Lkk" firstAttribute="top" secondItem="Uj0-i2-5yg" secondAttribute="bottom" constant="24" id="59E-Hr-orj"/>
                                 <constraint firstItem="aQN-30-H9G" firstAttribute="top" secondItem="BRt-og-nfn" secondAttribute="bottom" constant="40" id="A27-cd-zN0"/>
                                 <constraint firstItem="BRt-og-nfn" firstAttribute="leading" secondItem="jzz-bl-nJl" secondAttribute="leading" constant="20" id="AIB-G2-QT7"/>
-                                <constraint firstAttribute="bottom" secondItem="aQN-30-H9G" secondAttribute="bottom" constant="15" id="C7Q-c9-UeW"/>
                                 <constraint firstItem="BRt-og-nfn" firstAttribute="top" secondItem="quc-Rg-Lkk" secondAttribute="bottom" constant="15" id="L6C-CK-US5"/>
                                 <constraint firstAttribute="trailing" secondItem="BRt-og-nfn" secondAttribute="trailing" constant="20" id="Pym-d0-WX9"/>
                                 <constraint firstItem="aQN-30-H9G" firstAttribute="leading" secondItem="jzz-bl-nJl" secondAttribute="leading" constant="28" id="QgV-JD-YtB"/>
