--- a/Depo/Depo/Presentation/SubViews/EmptyView/EmptyView.xib
+++ b/Depo/Depo/Presentation/SubViews/EmptyView/EmptyView.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -31,7 +32,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" name="background"/>
                             <constraints>
                                 <constraint firstItem="Qtr-NV-B1N" firstAttribute="top" secondItem="VT1-hY-bSE" secondAttribute="bottom" constant="24" id="0J6-GR-0pd"/>
                                 <constraint firstAttribute="trailing" secondItem="Qtr-NV-B1N" secondAttribute="trailing" constant="30" id="1dR-1l-9it"/>
@@ -43,7 +44,7 @@
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" name="background"/>
                     <constraints>
                         <constraint firstItem="lFy-cC-bXQ" firstAttribute="leading" secondItem="MR9-pD-zgi" secondAttribute="leading" id="ck9-Xp-dck"/>
                         <constraint firstItem="lFy-cC-bXQ" firstAttribute="top" secondItem="MR9-pD-zgi" secondAttribute="top" constant="40" id="mZi-WK-ZzN"/>
@@ -69,6 +70,9 @@
     </objects>
     <resources>
         <image name="hidden_big" width="119" height="80"/>
+        <namedColor name="background">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
