--- a/Depo/Depo/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/PrivateShareSharedFilesViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/PrivateShareSharedFilesViewController.xib
@@ -27,7 +27,7 @@
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tdo-YS-avN">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="53"/>
-                            <color key="backgroundColor" name="primaryBackground"/>
+                            <color key="backgroundColor" name="background"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="53" id="tY1-d7-HAb"/>
                             </constraints>
@@ -36,7 +36,7 @@
                 </stackView>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="c4H-7I-uCm">
                     <rect key="frame" x="0.0" y="97" width="414" height="765"/>
-                    <color key="backgroundColor" name="primaryBackground"/>
+                    <color key="backgroundColor" name="background"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KbB-cg-g9h">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -60,6 +60,9 @@
         </view>
     </objects>
     <resources>
+        <namedColor name="background">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
