LB-1965 LB-1979 Facelift
bug fixes

--- a/Depo/Depo/Presentation/UserStories/Grid/BaseFilesGreed/View/BaseFilesGreedViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Grid/BaseFilesGreed/View/BaseFilesGreedViewController.xib
@@ -65,16 +65,16 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZI3-Dh-bXS">
-                    <rect key="frame" x="16" y="100" width="382" height="185"/>
+                    <rect key="frame" x="16" y="193.66666666666663" width="382" height="205"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fdq-Cf-39W">
-                            <rect key="frame" x="8" y="124" width="366" height="0.0"/>
+                            <rect key="frame" x="8" y="124.00000000000003" width="366" height="0.0"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTy-IA-Avr" customClass="BlueButtonWithNoFilesWhiteText" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="28" y="140" width="326" height="45"/>
+                            <rect key="frame" x="28" y="160.00000000000003" width="326" height="45"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="45" id="03I-TC-x2h"/>
                                 <constraint firstAttribute="width" constant="326" id="pUd-hQ-hMP"/>
@@ -105,7 +105,7 @@
                     </subviews>
                     <constraints>
                         <constraint firstItem="qz2-SP-6oQ" firstAttribute="centerX" secondItem="ZI3-Dh-bXS" secondAttribute="centerX" id="6A0-hR-1ae"/>
-                        <constraint firstItem="UTy-IA-Avr" firstAttribute="top" secondItem="fdq-Cf-39W" secondAttribute="bottom" constant="16" id="9ks-nj-hts"/>
+                        <constraint firstItem="UTy-IA-Avr" firstAttribute="top" secondItem="fdq-Cf-39W" secondAttribute="bottom" constant="36" id="9ks-nj-hts"/>
                         <constraint firstAttribute="bottom" secondItem="UTy-IA-Avr" secondAttribute="bottom" id="KV4-aB-0vn"/>
                         <constraint firstItem="fdq-Cf-39W" firstAttribute="leading" secondItem="ZI3-Dh-bXS" secondAttribute="leading" constant="8" id="QSi-hF-074"/>
                         <constraint firstItem="fdq-Cf-39W" firstAttribute="top" secondItem="qz2-SP-6oQ" secondAttribute="bottom" constant="24" id="SPi-rc-70a"/>
@@ -139,7 +139,6 @@
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="0lC-K4-1ac" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="1b8-sN-taw"/>
-                <constraint firstItem="ZI3-Dh-bXS" firstAttribute="top" secondItem="THw-xy-ykx" secondAttribute="top" constant="100" id="6BJ-cD-Y7L"/>
                 <constraint firstItem="e3K-s6-bzd" firstAttribute="bottom" secondItem="0Sm-wn-Msc" secondAttribute="bottom" id="6My-mu-slE"/>
                 <constraint firstAttribute="bottom" secondItem="Umz-wA-WsK" secondAttribute="bottom" id="BPZ-rn-X4w"/>
                 <constraint firstAttribute="bottom" secondItem="0Sm-wn-Msc" secondAttribute="bottom" id="CRt-nA-Xxz"/>
@@ -158,6 +157,7 @@
                 </constraint>
                 <constraint firstAttribute="trailing" secondItem="ZI3-Dh-bXS" secondAttribute="trailing" constant="16" id="fRH-8S-qhb"/>
                 <constraint firstAttribute="trailing" secondItem="0lC-K4-1ac" secondAttribute="trailing" constant="16" id="hq9-pl-y0n"/>
+                <constraint firstItem="ZI3-Dh-bXS" firstAttribute="centerY" secondItem="THw-xy-ykx" secondAttribute="centerY" constant="-50" id="p67-eu-evr"/>
                 <constraint firstItem="0Sm-wn-Msc" firstAttribute="top" secondItem="acy-kT-cr5" secondAttribute="bottom" id="t0N-2A-ZnV"/>
                 <constraint firstItem="e3K-s6-bzd" firstAttribute="top" secondItem="0Sm-wn-Msc" secondAttribute="top" id="wQN-PB-XI0"/>
                 <constraint firstItem="acy-kT-cr5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="wsG-gx-aXa"/>
